z-index of counter page resolved

--- a/src/scss/Counter.scss
+++ b/src/scss/Counter.scss
@@ -1,53 +1,55 @@
 .counter-section {
-    margin-top: 20px;
-    padding: 50px;
-    color:var(--black);
-    text-align: center;
-    background: var(--gradient);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    
-    h2 {
-      font-family: var(--font3);
-      font-size: 2rem;  
-      text-decoration: underline var(--white) 15px;
-      margin-bottom: 30px;
-      color: var(--white);
-    }
-  
-    .counter-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 8rem;
-      flex-wrap: wrap;
-  
-      .counter-item {
-        margin: 10px;
-        text-align: center;
-  
-        .icon {
-          font-size: 2rem;
-          margin-bottom: 10px;
+  z-index: -1;
+  margin-top: 20px;
+  padding: 50px;
+  color: var(--black);
+  text-align: center;
+  background: var(--gradient);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
-          img{
-            height: 90px;
-            width: 150px;
-            width: fit-content;
+  h2 {
+    font-family: var(--font3);
+    font-size: 2rem;
+    text-decoration: underline var(--white) 15px;
+    margin-bottom: 30px;
+    color: var(--white);
+  }
 
-          }
+  .counter-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+    flex-wrap: wrap;
+
+    .counter-item {
+      margin: 10px;
+      text-align: center;
+
+      .icon {
+        font-size: 2rem;
+        margin-bottom: 10px;
+
+        img {
+          z-index: -1;
+          height: 90px;
+          width: 150px;
+          width: fit-content;
         }
-  
-        h3 {
-          font-size: 2rem;
-          color:var(--white); // Icon color for the number
-        }
-  
-        p {
-          font-family: var(--font31);
-          font-size: 1.5rem;
-          margin-top: 5px;
-        }
+      }
+
+      h3 {
+        font-size: 2rem;
+        color: var(--white); // Icon color for the number
+      }
+
+      p {
+        font-family: var(--font31);
+        font-size: 1.5rem;
+        margin-top: 5px;
       }
     }
   }
-  
+}
